# ENGSW-2019-1-UNB

./: Arquitetura-trab-1.asta  Arquitetura-v1.png.bak  CMakeLists.txt  Modelo Casos de Uso1.asta  Modelo de casos de uso v1.png.bak  README.md  Readme.txt  classes to make or adapt.txt  main.cpp
Database/: Database.db  DatabaseAntiga.db  DatabaseNova.db  query-Inserir-Evento  query-Inserir-Ingresso  query-Inserir-nova-apresentacao  query-Retornar-Cpf-Compradores  query-apresentacoes-distintas-de-evento  query-deletar-eventos  query-editar-evento  query-ingresso-vendido-em-apresentacao-de-evento  query-solicitar-informacao-evento  query-solicitar-informacao-ingressos
Headers/ComandoSQL/: ComandoAutenticar.h  ComandoCadastrarAcomodacao.h  ComandoCadastrarCartaoCredito.h  ComandoCadastrarContaCorrente.h  ComandoCadastrarDisponibilidadeAcomodacao.h  ComandoCadastrarEvento.h  ComandoCadastrarUsuario.h  ComandoCancelarReserva.h  ComandoChecarContaCorrente.h  ComandoComprarIngresso.h  ComandoDescadastrarAcomodacao.h  ComandoDescadastrarCartaoCredito.h  ComandoDescadastrarContaCorrente.h  ComandoDescadastrarDisponibilidade.h  ComandoDescadastrarEvento.h  ComandoDescadastrarUsuario.h  ComandoEditarAcomodacao.h  ComandoEditarEvento.h  ComandoEditarUsuario.h  ComandoGetApresentacoesFromEvento.h  ComandoGetIngressosFromApresentacao.h  ComandoPesquisarAcomodacao.h  ComandoPesquisarEvento.h  ComandoRealizarReserva.h  ComandoSQL.h  ComandoSolicitarInformacaoDeVendas.h
Headers/Controladoras/: CntrInicio.h
Headers/Controladoras/Apresentacao/: CntrAprAcomodacao.h  CntrAprAutenticacao.h  CntrAprEvento.h  CntrAprReserva.h  CntrAprUsuarios.h  CntrAprVendas.h
Headers/Controladoras/Servico/: CntrServAcomodacao.h  CntrServAutenticacao.h  CntrServEvento.h  CntrServReserva.h  CntrServUsuarios.h  CntrServVendas.h  CntrsServAcomodacao.h  CntrsServAutenticacao.h  CntrsServReserva.h  CntrsServUsuarios.h  cntrServEvento.h
Headers/Dominios/: Agencia.h  Banco.h  Capacidade_De_Acomodacao.h  Cidade.h  Classe_De_Evento.h  Codigo_De_Apresentacao.h  Codigo_De_Evento.h  Codigo_De_Ingresso.h  Codigo_De_Seguranca.h  Cpf.h  Data.h  Data_De_Validade.h  Diaria.h  Disponibilidade.h  Estado.h  Faixa_Etaria.h  Horario.h  Identificador.h  Nome.h  Nome_De_Evento.h  Num_Cartao_Credito.h  Num_Conta_Corrente.h  Num_De_Sala.h  Preco.h  Senha.h  Tipo_Acomodacao.h
Headers/Entidades/: Acomodacao.h  Apresentacao.h  Cartao_De_Credito.h  Conta_Corrente.h  Evento.h  Ingresso.h  Intervalo_Datas.h  Usuario.h
Headers/Interfaces/Apresentacao/: InterAprAcomodacao.h  InterAprAutenticacao.h  InterAprEvento.h  InterAprReserva.h  InterAprUsuarios.h  InterAprVendas.h
Headers/Interfaces/Servico/: InterServAcomodacao.h  InterServAutenticacao.h  InterServEvento.h  InterServReserva.h  InterServUsuarios.h  InterServVendas.h
Headers/Teste/: Teste.h
Headers/Teste/Dominios/: Teste_Agencia.h  Teste_Banco.h  Teste_Capacidade_De_Acomodacao.h  Teste_Cidade.h  Teste_Classe_De_Evento.h  Teste_Codigo_De_Apresentacao.h  Teste_Codigo_De_Evento.h  Teste_Codigo_De_Ingresso.h  Teste_Codigo_De_Seguranca.h  Teste_Cpf.h  Teste_Data.h  Teste_Data_De_Validade.h  Teste_Diaria.h  Teste_Disponibilidade.h  Teste_Dominios.h  Teste_Estado.h  Teste_Faixa_Etaria.h  Teste_Horario.h  Teste_Identificador.h  Teste_Nome.h  Teste_Nome_De_Evento.h  Teste_Num_Cartao.h  Teste_Num_Conta_Corrente.h  Teste_Num_De_Sala.h  Teste_Preco.h  Teste_Senha.h  Teste_Tipo_Acomodacao.h
Headers/Teste/Entidades/: Teste_Acomodacao.h  Teste_Apresentacao.h  Teste_Cartao_De_Credito.h  Teste_Conta_Corrente.h  Teste_Entidades.h  Teste_Evento.h  Teste_Ingresso.h  Teste_Usuario.h
Sources/ComandoSQL/: ComandoAutenticar.cpp  ComandoCadastrarAcomodacao.cpp  ComandoCadastrarCartaoCredito.cpp  ComandoCadastrarContaCorrente.cpp  ComandoCadastrarDisponibilidadeAcomodacao.cpp  ComandoCadastrarEvento.cpp  ComandoCadastrarUsuario.cpp  ComandoCancelarReserva.cpp  ComandoChecarContaCorrente.cpp  ComandoComprarIngresso.cpp  ComandoDescadastrarAcomodacao.cpp  ComandoDescadastrarCartaoCredito.cpp  ComandoDescadastrarContaCorrente.cpp  ComandoDescadastrarDisponibilidade.cpp  ComandoDescadastrarEvento.cpp  ComandoDescadastrarUsuario.cpp  ComandoEditarAcomodacao.cpp  ComandoEditarEvento.cpp  ComandoEditarUsuario.cpp  ComandoGetApresentacoesFromEvento.cpp  ComandoGetIngressosFromApresentacao.cpp  ComandoPesquisarAcomodacao.cpp  ComandoPesquisarEvento.cpp  ComandoRealizarReserva.cpp  ComandoSQL.cpp  ComandoSolicitarInformacaoDeVendas.cpp
Sources/Controladoras/: CntrInicio.cpp
Sources/Controladoras/Apresentacao/: CntrAprAcomodacao.cpp  CntrAprAutenticacao.cpp  CntrAprEvento.cpp  CntrAprReserva.cpp  CntrAprUsuarios.cpp  CntrAprVendas.cpp
Sources/Controladoras/Servico/: CntrServAcomodacao.cpp  CntrServAutenticacao.cpp  CntrServEvento.cpp  CntrServReserva.cpp  CntrServUsuarios.cpp  CntrServVendas.cpp  CntrsServAcomodacao.cpp  CntrsServAutenticacao.cpp  CntrsServReserva.cpp  CntrsServUsuarios.cpp  cntrServEvento.cpp
Sources/Dominios/: Agencia.cpp  Banco.cpp  Capacidade_De_Acomodacao.cpp  Cidade.cpp  Classe_De_Evento.cpp  Codigo_De_Apresentacao.cpp  Codigo_De_Evento.cpp  Codigo_De_Ingresso.cpp  Codigo_De_Seguranca.cpp  Cpf.cpp  Data.cpp  Data_De_Validade.cpp  Diaria.cpp  Disponibilidade.cpp  Estado.cpp  Faixa_Etaria.cpp  Horario.cpp  Identificador.cpp  Nome.cpp  Nome_De_Evento.cpp  Num_Cartao_Credito.cpp  Num_Conta_Corrente.cpp  Num_De_Sala.cpp  Preco.cpp  Senha.cpp  Tipo_Acomodacao.cpp
Sources/Entidades/: Acomodacao.cpp  Apresentacao.cpp  Cartao_De_Credito.cpp  Conta_Corrente.cpp  Evento.cpp  Ingresso.cpp  Intervalo_Datas.cpp  Usuario.cpp
Sources/Teste/: Teste.cpp
Sources/Teste/Dominios/: Teste_Agencia.cpp  Teste_Banco.cpp  Teste_Capacidade_De_Acomodacao.cpp  Teste_Cidade.cpp  (+23 more)
casos-de-uso/: .~lock.editar-evento.doc#  .~lock.use_case_spec_withdraw_cash.doc#  Use-Case Specification.doc  autenticar-usuario.doc  cadastrar-evento.doc  cadastrar-usuario.doc  comprar-ingresso.doc  consultar-evento.doc  descadastrar-do-sistema.doc  descadastrar-evento.doc  editar-evento.doc  solicitar-informacao-vendas.doc
(+8 files in other folders)
